Fix issue of open-ended curSld overflow

--- a/src/components/CurSld/curSld.css
+++ b/src/components/CurSld/curSld.css
@@ -54,6 +54,9 @@
   z-index: 99;
 }
 
+#open-ended-qus {
+  position: relative;
+}
 #current-sld:fullscreen > .qus-div {
   line-height: 4rem;
 }
